<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/dialog_rounded_bg">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/dialog_exam_title"
        android:textColorHint="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exam_cfu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cfu:"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cfu_numpic"
        app:layout_constraintTop_toBottomOf="@+id/dialog_name_input_layout"
        app:layout_constraintBottom_toBottomOf="@+id/cfu_numpic"
        />

    <NumberPicker
        android:id="@+id/cfu_numpic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/exam_cfu_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_name_input_layout"
        />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cfu_numpic"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exam_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date:"
        android:textSize="20sp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toStartOf="@id/date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintBottom_toBottomOf="@id/date_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="select"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintStart_toEndOf="@id/exam_date_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_button"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/dialog_button_ok"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toStartOf="@+id/dialog_cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dialog_button_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_ok_btn"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>